# Timbral_Instrumental_Homogeneity

./: .gitignore  CITATION.cff  CURRENT_CODE_CHARACTERISTICS_REPORT.md  FINAL_VERIFICATION_REPORT.md  LEGACY.md  MAINTAINERS.md  NOTICE.md  QUICK_REFERENCE.md  README.md  TECHNICAL_MANUAL.md  _appendix_d_extract.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements-install.txt  requirements.txt  run.bat
.circleci/: config.yml
.github/workflows/: tests.yml
Homogeneity_analyser_install/: README_INSTALLATION.txt
archive/pre_consolidation_2026/: TECHNICAL_MANUAL_before_section18.md  TECHNICAL_MANUAL_section18_bibliography.md
docs/: ARCHITECTURE.md  CLEANUP_REPORT.md  HTI_SYMBOLIC_PIPELINE.md  H_TA_ACOUSTIC_PROXY.md  H_TIMBRAL_BRASS.md  H_TIMBRAL_CLARINETS.md  H_TIMBRAL_DESIGN_INDEX.md  H_TIMBRAL_DOUBLE_REEDS.md  H_TIMBRAL_FLUTES.md  H_TIMBRAL_PERCUSSION.md  H_TIMBRAL_SAXOPHONES.md  H_TIMBRAL_SCORE_REPRESENTATION.md  H_TIMBRAL_STRINGS.md  H_TIMBRAL_VERIFIED_CROSS_RELATIONS.md  Instrumental articulation catalogue.md  METRIC_CODE_MAP.md  ONBOARDING_H_TI.md  PRODUCT_SCOPE.md  QUICK_REFERENCE_SYMBOLIC_NAMES.md  STRING_HARMONIC_INTERVAL_REFERENCE.md  SYMBOLIC_INTERVAL_CLASS_LAYER.md  TIMBRAL_AFFINITY_LITERATURE_AUDIT.md  index.md  project_current_code_characteristics.md  project_quick_reference.md  project_readme.md  project_technical_manual.md
docs/archive_legacy/: HOMOGENEITY_ANALYSER_MASTER_DOCUMENT.md  README.md  SANITATION_INVENTORY_2026-05-19.md  SANITATION_REPORT_2026-05-19.md  SCIENTIFIC_TECHNICAL_AUDIT.md  TECHNICAL_MANUAL_NARRATIVE_HTI_2026.md  report_legacy_multimetric.md
docs/bibliography/: ACOUSTIC_SOURCE_REGISTRY.md
docs/javascripts/: mathjax.js
docs/model_audit/: H_TIMBRAL_ASSUMPTIONS_AUDIT.md
instalers/: README.md
instalers/common/: bootstrap.py  config.py
instalers/linux/: README.md  build-all.sh  install-and-run.sh  install-easy.sh  setup-runtime.sh
instalers/mac/: README.md  build-all.sh  install-and-run.sh  install-easy.sh  (+1 more)
scripts/: build_acoustic_source_registry_json.py  build_default_timbral_profile_json.py  make_release_zip.ps1
tests/: __init__.py  conftest.py  test_H_timbral_technique_audit_integration.py  test_acoustic_source_registry.py  test_analysis_param_validation.py  test_analysis_service.py  test_analyzers.py  test_analyzers_lazy_legacy.py  test_architecture_contract.py  test_audit_rigorous_timbral.py  test_brass_timbral.py  test_callback_result_formatting.py  test_clarinet_timbral.py  test_cluster_metric.py  test_coverage_policy.py  test_documentation_consistency.py  test_dominant_with_ties.py  test_double_reed_timbral.py  test_exporter_taxonomy_aliases.py  test_flute_timbral.py  test_fusion_acoustic_heuristic.py  test_golden_fixture_validation.py  test_gradio_wiring.py  test_h_timbral_assumptions_audit_doc.py  test_harmonic_pitch_interpretation.py  test_hti_acoustic_proxy_exports.py  test_hti_active_weights.py  test_hti_adaptive_windows.py  test_hti_comparability.py  test_hti_core_golden_outputs.py  test_hti_dynamic_conditioning.py  test_hti_export_rows.py  test_hti_refinement.py  test_hti_register_compactness.py  test_hti_symbolic_blend_exports.py  test_hti_technique_coverage.py  test_hti_ui_params.py  test_hti_window_edge_cases.py  test_json_export.py  test_legacy_multimetric_ui_params.py  (+49 more)
tools/: emergency_restore_markdown.py  fix_legacy_test_markers.py  fix_pytest_import_order.py  mark_legacy_tests.py  remove_module_pytestmark.py  repair_test_files.py  restore_pytest_imports.py  split_analysis_service.py
validation/: run_validation.py
(+193 files in other folders)
